--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GlowRoadTask</string>
     <string name="no_internet_connection">No Internet Connection</string>
+    <string name="title">NEW YORk:The British phone-hacking scandal brought simmering tension</string>
+    <string name="posi">position</string>
 </resources>
